[gd_scene load_steps=7 format=3 uid="uid://c4uxehu3fgkqv"]

[ext_resource type="Script" path="res://scenes/vault/main/password.gd" id="1_tb422"]
[ext_resource type="Theme" uid="uid://bacgw44syfs43" path="res://assets/godot stuff/themes/settings.tres" id="2_p5kkd"]

[sub_resource type="FontVariation" id="FontVariation_51o4g"]

[sub_resource type="FontVariation" id="FontVariation_6dywl"]

[sub_resource type="FontVariation" id="FontVariation_erjq5"]

[sub_resource type="FontVariation" id="FontVariation_yipkx"]

[node name="password" type="Node2D"]
script = ExtResource("1_tb422")

[node name="Button1" type="Button" parent="."]
offset_left = 800.0
offset_top = 540.0
offset_right = 1100.0
offset_bottom = 673.0
theme = ExtResource("2_p5kkd")
theme_override_font_sizes/font_size = 40
text = "↓"

[node name="Button2" type="Button" parent="."]
offset_left = 1150.0
offset_top = 540.0
offset_right = 1450.0
offset_bottom = 673.0
theme = ExtResource("2_p5kkd")
theme_override_font_sizes/font_size = 40
text = "→"

[node name="Button3" type="Button" parent="."]
offset_left = 450.0
offset_top = 540.0
offset_right = 750.0
offset_bottom = 673.0
theme = ExtResource("2_p5kkd")
theme_override_font_sizes/font_size = 40
text = "←"

[node name="Button4" type="Button" parent="."]
offset_left = 800.0
offset_top = 381.0
offset_right = 1100.0
offset_bottom = 514.0
theme = ExtResource("2_p5kkd")
theme_override_font_sizes/font_size = 40
text = "↑"

[node name="Button5" type="Button" parent="."]
offset_left = 450.0
offset_top = 381.0
offset_right = 750.0
offset_bottom = 514.0
theme = ExtResource("2_p5kkd")
theme_override_fonts/font = SubResource("FontVariation_51o4g")
theme_override_font_sizes/font_size = 40
text = "A"

[node name="Button6" type="Button" parent="."]
offset_left = 1150.0
offset_top = 381.0
offset_right = 1450.0
offset_bottom = 514.0
theme = ExtResource("2_p5kkd")
theme_override_fonts/font = SubResource("FontVariation_6dywl")
theme_override_font_sizes/font_size = 40
text = "B"

[node name="Button7" type="Button" parent="."]
offset_left = 600.0
offset_top = 800.0
offset_right = 900.0
offset_bottom = 933.0
theme = ExtResource("2_p5kkd")
theme_override_fonts/font = SubResource("FontVariation_erjq5")
theme_override_font_sizes/font_size = 40
text = "enter vault"

[node name="Button8" type="Button" parent="."]
offset_left = 1000.0
offset_top = 800.0
offset_right = 1300.0
offset_bottom = 933.0
theme = ExtResource("2_p5kkd")
theme_override_fonts/font = SubResource("FontVariation_yipkx")
theme_override_font_sizes/font_size = 40
text = "exit"

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
